@@ -224,3 +224,5 @@
 	in 'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
 2015-03-01 Fred Gleason <fredg@paravelsystems.com>
 	* Added syplay(8) in 'tests/syplay.cpp' and 'test/syplay.h'.
+2015-03-01 Fred Gleason <fredg@paravelsystems.com>
+	* Stubbed out 'SyClock' in 'sy/syclock.cpp' and 'sy/syclock.h'.
